<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我的代言人X</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="app_add">ADD</string>
    <string name="app_update">UPD</string>
    <string name="app_delete">DEL</string>
    <string name="app_clear">CLE</string>
    <string name="app_ID">ID:</string>
    <string name="app_content">Content:</string>
    <string name="app_count">Count:</string>
    <string name="app_ID1">ID1:</string>
    <string name="app_ID2">ID2:</string>

    <string name="backup_title">資料備份</string>
    <string name="backup_local">備份至本地</string>
    <string name="backup_cloud">備份至雲端</string>
    <string name="backup_delete">刪除辭庫</string>

    <string name="input_chk1">即時語音</string>
    <string name="input_chk2">演講模式</string>
    <string name="input_chk3">本地語音</string>
    <string name="input_chk4">連線模式</string>
    <string name="input_talk">TALK</string>
    <string name="no_data">無資料</string>
    <string name="quick_setting">快速設定</string>


    <string name="connect_mode_title">代言人顯示器</string>
    <string name="saying_prompt">message( 以下可滑動 ) :</string>

    <string name="nav_input">代言人</string>
    <string name="nav_display">顯示器</string>
    <string name="nav_backup">資料備份</string>
    <string name="nav_setting">設定</string>
    <string name="nav_help">說明</string>

    <string name="connection_setting">連線設定</string>
    <string name="system_setting">系統設定</string>
    <string name="system_help">使用說明</string>
    <string name="select_file">請選擇需要說明的項目</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
</resources>

