<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_title"
        android:textSize="30sp"
        android:layout_gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_local"
                android:textSize="10pt"
                android:id="@+id/localBkup"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_cloud"
                android:textSize="10pt"
                android:id="@+id/cloudBkup"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="@string/backup_delete"
                android:id="@+id/delData"
                android:layout_marginBottom="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fileList">

            </ListView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:baselineAligned="false">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>